before lambda deployment

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 export PKG_CONFIG_PATH=/usr/local/Cellar/fcl/0.6.1/lib/pkgconfig/:/usr/local/Cellar/libpng/1.6.35/lib/pkgconfig:/usr/local/lib/pkgconfig
+export LD_LIBRARY_PATH=/usr/local/Cellar/fcl/0.6.1/lib:/usr/local/lib
