lambda invocation started

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,48 +37,43 @@ endif()
 link_directories(${FCL_LIBRARY_DIRS} ${ASSIMP_LIBRARY_DIRS})
 include_directories(include ../nigh/src ${FCL_INCLUDE_DIRS} ${ASSIMP_INCLUDE_DIRS} ${RABBITMQ_INCLUDE_DIRS} ${PNG_INCLUDE_DIRS})
 
-#add_executable(mpl_coordinator src/coordinator.cpp include/util.hpp include/demo/app_options.hpp include/tree.hpp include/comm.hpp include/syserr.hpp include/write_queue.hpp include/buffer.hpp include/packet.hpp src/comm.cpp src/write_queue.cpp)
-add_executable(mpl_coordinator src/coordinator.cpp src/comm.cpp src/write_queue.cpp)
-target_link_libraries(mpl_coordinator PUBLIC ${FCL_LIBRARIES} ${ASSIMP_LIBRARIES} ${RABBITMQ_LIBRARIES} ${PNG_LIBRARIES})
 
 add_executable(mpl_lambda_fixed_graph src/demo/lambda_fixed_graph.cpp src/comm.cpp src/write_queue.cpp)
 target_link_libraries(mpl_lambda_fixed_graph PUBLIC Eigen3::Eigen ${FCL_LIBRARIES} ${ASSIMP_LIBRARIES} ${RABBITMQ_LIBRARIES} ${PNG_LIBRARIES})
 
-#if (${APPLE})
-#  #add_executable(mpl_coordinator src/mpl_coordinator.cpp src/mpl/write_queue.cpp)
-#  add_executable(mpl_coordinator src/coordinator.cpp )
-#    # target_link_libraries(mpl_coordinator Threads::Threads)
-#
-#else ()
-#    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DHAS_AWS_SDK")
-#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAS_AWS_SDK")
-#    
-#    find_package(aws-lambda-runtime REQUIRED)
-#    find_package(AWSSDK COMPONENTS s3 lambda)
-#    add_executable(mpl_lambda_aws src/mpl_lambda_aws.cpp src/mpl/demo/lambda_common.cpp src/mpl/comm.cpp src/mpl/write_queue.cpp src/mpl/demo/app_options.cpp)
-#    target_link_libraries(mpl_lambda_aws PUBLIC Eigen3::Eigen Threads::Threads ${ASSIMP_LIBRARIES} ${FCL_LIBRARIES} ${CCD_LIBRARIES} AWS::aws-lambda-runtime ${AWSSDK_LINK_LIBRARIES})
-#    
-#    # the following line adds "aws-lambda-package-mpl_lambda_aws" as a
-#    # target which creates a .zip file with everything we need to
-#    # upload a function to aws.
-#    aws_lambda_package_target(mpl_lambda_aws)
-#
-#    # this is the command to run in order to create the full lambda zip:
-#    add_custom_target(mpl_lambda_aws_zip
-#    	COMMAND zip -ur9 mpl_lambda_aws.zip resources
-#    	DEPENDS aws-lambda-package-mpl_lambda_aws)
-#
-#    # After creating the lambda zip, we can upload it using:
-#    add_custom_target(update-function-code
-#        COMMAND aws lambda update-function-code --function-name mpl_lambda_aws_test --zip-file fileb://mpl_lambda_aws.zip)
-#
-#    add_executable(mpl_lambda_invoke src/mpl_lambda_invoke.cpp)
-#    target_link_libraries(mpl_lambda_invoke AWS::aws-lambda-runtime ${AWSSDK_LINK_LIBRARIES})
-#
-#    add_executable(mpl_coordinator src/mpl_coordinator.cpp src/mpl/write_queue.cpp)
-#    target_link_libraries(mpl_coordinator Threads::Threads AWS::aws-lambda-runtime ${AWSSDK_LINK_LIBRARIES})
-#
-#endif()
+if (${APPLE})
+	add_executable(mpl_coordinator src/coordinator.cpp src/comm.cpp src/write_queue.cpp)
+	target_link_libraries(mpl_coordinator PUBLIC ${FCL_LIBRARIES} ${ASSIMP_LIBRARIES} ${RABBITMQ_LIBRARIES} ${PNG_LIBRARIES})
+else ()
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DHAS_AWS_SDK")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAS_AWS_SDK")
+    
+    find_package(aws-lambda-runtime REQUIRED)
+    find_package(AWSSDK COMPONENTS s3 lambda)
+    add_executable(mpl_lambda_aws src/mpl_lambda_aws.cpp src/mpl/demo/lambda_common.cpp src/mpl/comm.cpp src/mpl/write_queue.cpp src/mpl/demo/app_options.cpp)
+    target_link_libraries(mpl_lambda_aws PUBLIC Eigen3::Eigen Threads::Threads ${ASSIMP_LIBRARIES} ${FCL_LIBRARIES} ${CCD_LIBRARIES} AWS::aws-lambda-runtime ${AWSSDK_LINK_LIBRARIES})
+    
+    # the following line adds "aws-lambda-package-mpl_lambda_aws" as a
+    # target which creates a .zip file with everything we need to
+    # upload a function to aws.
+    aws_lambda_package_target(mpl_fixed_graph_aws)
+
+    # this is the command to run in order to create the full lambda zip:
+    add_custom_target(mpl_fixed_graph_aws_zip
+    	COMMAND zip -ur9 mpl_fixed_graph_aws.zip resources
+    	DEPENDS aws-lambda-package-mpl_fixed_graph_aws)
+
+    # After creating the lambda zip, we can upload it using:
+    add_custom_target(update-function-code
+        COMMAND aws lambda update-function-code --function-name mpl_fixed_graph_aws --zip-file fileb://mpl_fixed_graph_aws.zip)
+
+    add_executable(mpl_lambda_invoke src/mpl_lambda_invoke.cpp)
+    target_link_libraries(mpl_lambda_invoke AWS::aws-lambda-runtime ${AWSSDK_LINK_LIBRARIES})
+
+    add_executable(mpl_coordinator src/mpl_coordinator.cpp src/mpl/write_queue.cpp)
+    target_link_libraries(mpl_coordinator Threads::Threads AWS::aws-lambda-runtime ${AWSSDK_LINK_LIBRARIES})
+
+endif()
 
 #link_directories(${FCL_LIBRARY_DIRS} ${ASSIMP_LIBRARY_DIRS})
 #include_directories(include ../../nigh/src ${FCL_INCLUDE_DIRS} ${ASSIMP_INCLUDE_DIRS})
