--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,8 @@ if (PKGCONFIG_FOUND)
   pkg_check_modules(FCL fcl>=0.6)
   pkg_check_modules(CCD ccd>=2.0)
   pkg_check_modules(RABBITMQ librabbitmq)
-  #pkg_check_modules(ASSIMP assimp)
+  pkg_check_modules(PNG libpng)
+  pkg_check_modules(ASSIMP assimp)
 else()
     find_package(FCL REQUIRED)
     find_package(CCD CONFIG)
@@ -24,10 +25,10 @@ endif()
 #########
 
 find_package(OpenMP REQUIRED)
-find_package(Assimp REQUIRED)
-find_package(Threads)
 find_package(Eigen3 3.3 REQUIRED NO_MODULE)
-find_package(PNG REQUIRED)
+#find_package(Assimp REQUIRED)
+find_package(Threads)
+#find_package(PNG REQUIRED)
 
 if (OPENMP_FOUND)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
