--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,7 @@ find_package(PkgConfig)
 if (PKGCONFIG_FOUND)
     pkg_check_modules(FCL fcl>=0.6)
     pkg_check_modules(CCD ccd>=2.0)
-    pkg_check_modules(PNG libpng)
-    pkg_check_modules(ASSIMP assimp)
+    pkg_check_modules(ASSIMP assimp>=4.0)
 else()
     find_package(FCL REQUIRED)
     find_package(CCD CONFIG)
@@ -27,7 +26,7 @@ find_package(OpenMP REQUIRED)
 find_package(Eigen3 3.3 REQUIRED NO_MODULE)
 #find_package(Assimp REQUIRED)
 find_package(Threads)
-#find_package(PNG REQUIRED)
+find_package(PNG REQUIRED)
 
 if (OPENMP_FOUND)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
